--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -2,7 +2,7 @@ stages:
 - name: Build
   steps:
   - runScriptConfig:
-      image: maven:3.6.0-jdk-8-alpine
+      image: maven:3.6.0-jdk-8
       shellScript: |-
         mvn clean install
 - name: Publish
